<resources>
    <string name="app_name">Hoarders</string>

    <string name="string_"></string>

    <string name="action_settings">Settings</string>
    <string name="action_start">Start</string>
    <string name="action_profile">Profile</string>
    <string name="action_friends">Friends</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="tab_text_1">Hoarders\' Map</string>
    <string name="tab_text_2">Your Resources</string>
    <string name="tab_text_3">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_map_game">Map</string>
    <string name="test_button">The Button</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_back">Back</string>
    <string name="action_logout">Logout</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_field_username">Username</string>
    <string name="title_field_password">Password</string>
    <string name="title_activity_profile">ProfileActivity</string>

</resources>
